[[heed]] → [[heed (vegetasie)|heed]] ([[heed (vegetasie)]])

--- a/Apeldoorne_(gemeente).mw
+++ b/Apeldoorne_(gemeente).mw
@@ -22,7 +22,7 @@ webstee = [http://www.apeldoorn.nl www.apeldoorn.nl] |
 [[Ofbeelding:HetLoo3.JPG|thumb|275px|Peleis 't Loo]]
 '''Apeldoorne''' ({{Audio|Apeldoorne.ogg|Nedersaksische uutsprake}}, [[Nederlaands|Nederlans]]: ''Apeldoorn'') is een gemeente op de [[Veluwe]] in de [[Nederlaand|Nederlanse]] [[pervincie|previnsie]] [[Gelderlaand|Gelderland]]. De heufdplaatse is de [[Apeldoorne (stad)|gelieknamige stad]]. Apeldoorne is wat oppervlakte angeet één van de grootste [[gemiente (bestuur)|gemeenten]] van [[Nederlaand]]. De gemeente had op 1 febrewaori 2008 zo'n 155.021 inwoners (bron: CBS).
 
-Een groot deel van 't landelijke gebied van Apeldoorne kenmärk zich deur veul netuur. 't Hele westen van de gemeente is onderdeel van de oostkante van de Veluwe, met op de [[stuwwalle]]n elegen [[bos]]sen en [[heed]]velden. De hoogste heuvel in de umgeving is de [[Toornebarg]], die 107,1 meter hoge is. De hoogste heuvel van de Veluwe is 110 meter (netuurgebied [[Imbosch]], bie [[Rheden]]). 
+Een groot deel van 't landelijke gebied van Apeldoorne kenmärk zich deur veul netuur. 't Hele westen van de gemeente is onderdeel van de oostkante van de Veluwe, met op de [[stuwwalle]]n elegen [[bos]]sen en [[heed (vegetasie)|heedvelden]]. De hoogste heuvel in de umgeving is de [[Toornebarg]], die 107,1 meter hoge is. De hoogste heuvel van de Veluwe is 110 meter (netuurgebied [[Imbosch]], bie [[Rheden]]). 
 
 ==Geschiedenisse==
 Rond [[792]] wödt Apeldoorne al eneumd as ''Appoldro''; toen was 't werschienlijk al een butenplaatse (''villa''). 't Kreeg betekenisse as industrieoord, toen 't zich in de vrogmederne tied töt centrum van de pepierverwärking ontwikkelde; 't dörpjen greuien vlogge maar kreeg gien [[stadsrechen]], oldere lu neumt de stad Apeldoorne dan ok nog de heeltied 't ''därp''. In [[1684]] koch [[Stadholder Willem III]] Peleis 't Loo. Nao 1800 ging de industriële betekenisse van Apeldoorne achteruut, al was in [[1869]] 't [[Apeldoorns Kenaal|Apeldoornse Kenaal]] of, waormee de stad via de [[Iessel]] verbunnen was met de [[Zuderzee]]. Nao de [[Tweede Wereldoorlog]] greuien 't uut töt een stad van nasionale betekenisse, ok met volkse wieken zoas De Maoten en Zeuvenhuzen.
