[[heed]] → [[heed (vegetasie)|heed]] ([[heed (vegetasie)]])

--- a/Horde.mw
+++ b/Horde.mw
@@ -7,7 +7,7 @@ De horde bleuit van [[mei]] tot [[september]]. De bloemen bin plat en geel. De b
 
 't Zaod is rond en bruun en hef rondumme een vleizige raand. As de plaante beweeg, maken de rollende zaojen een rammelend geluud.
 
-De plaante kump veur in [[greslaand]], op [[diek]]en, revierdunen, [[duun]]valleien en vergrezen [[heed]] op vochtige tot aorig dreuge, maotig voedselrieke grond.
+De plaante kump veur in [[greslaand]], op [[diek]]en, revierdunen, [[duun]]valleien en vergrezen [[heed (vegetasie)|heed]] op vochtige tot aorig dreuge, maotig voedselrieke grond.
 
 ==Namen in aandere talen==
 *[[Duuts]]: ''Kleiner Klappertopf''
