--- a/Heed_(laandschap).mw
+++ b/Heed_(laandschap).mw
@@ -29,7 +29,7 @@ Heed is veural belangriek veur reptielen zoas de [[zaandevedesse]], de [[levendb
 Wat [[voegels]] angeet mu-j denken an de haos uut-estörven [[korhoen]]ders, de weer toenemende [[zaandzwelver|nachzwaoluw]], de [[roodborstapuit]], de [[boompieper]] en de [[veldleeuwerik]]. De [[klapikster]] is een [[klauwier]]soorte dee oek flink in antal achteruut-egaon is deur ofname van 't heedoppervlakte en de achteruutgang van de res van 't open laandschap.
 
 ==Geschiedenisse==
-De heedvelden ontstungen an 't einde van de [[middeleeuwn|middeleeuwen]]. De of-elegen gebieden wönnen overdag begreesd deur [[schaop|schapen]] dee 's nachs in de stalle bleven, waorvan de bojem jaorlijks mit varse heedplaggen bedek wönnen. De stalmes wönnen jaorlijks naor de akkers ebröch, dee daordeur zeutjes an hoger wönnen. Disse vorm van [[laandbouw]] mit de kenmarkende [[esdarp]]en en [[heerdgang]]en bleef tot 't einde van de [[19e eeuw]] bestaon. In 1898 was nog ruum 20% van 't oppervlakte van Nederland "weuste grond" en 't bestung veurnamelijk uut [[heed]]. 
+De heedvelden ontstungen an 't einde van de [[middeleeuwn|middeleeuwen]]. De of-elegen gebieden wönnen overdag begreesd deur [[schaop|schapen]] dee 's nachs in de stalle bleven, waorvan de bojem jaorlijks mit varse heedplaggen bedek wönnen. De stalmes wönnen jaorlijks naor de akkers ebröch, dee daordeur zeutjes an hoger wönnen. Disse vorm van [[laandbouw]] mit de kenmarkende [[esdarp]]en en [[heerdgang]]en bleef tot 't einde van de [[19e eeuw]] bestaon. In 1898 was nog ruum 20% van 't oppervlakte van Nederland "weuste grond" en 't bestung veurnamelijk uut heed. 
 
 De uutviending van [[kunsmes]] zurgen veur een legere behoefte an schapenmes en maken 't meugelijk de heedvelden tot laandbouwgrond te ontginnen. Daornaos wönnen veul heedvelden in bos ummezet. Speciaal mit dit doel wönnen [[staotsbosbeheer]] op-erich. Ongeveer tegeliekertied ontstung de belangstelling veur de heed bie netuurbescharmers. As gevolg hiervan zag staotsbosbeheer of van de bebossing van weerdevolle heedvelden en koch [[Vereniging Natuurmonumenten|Natuurmonumenten]] grote heedvelden, waoronder de [[Kampina]]. An 't einde van de [[20e eeuw]] bestung nog minder as 1% van Nederlaand uut heed. Behalven de [[militair oefenterrein|militaire oefenterreinen]] bin zwat alle over-ebleven heedvelden noen eigendom van [[staotsbosbeheer]], de [[Vereniging Natuurmonumenten]] en de previnsiale laandschappen.
 
