--- a/Kouwe_(huusvesting).mw
+++ b/Kouwe_(huusvesting).mw
@@ -2,7 +2,7 @@
 Een '''kouwe''' of een '''kooi''' is een beweerplaose veur dieren waor gaos umhinne zit of waor traolies veurzitten. Een kouwe wonnen veul gebruuk in een [[dierentune]], in een [[circus]] of bie [[mense|meensen]] thuus. 't Leste wonnen veural gebruuk um kleine [[huusdier]]en (zoas [[voegels]], kleine [[knaagdier]]en) in te houwen.
 
 ==Stallen==
-Sommigen [[stalle]]n wonnen oek een kouwe eneumd. Mit name een [[opstal]] veur [[schaop|schapen]], de ''schaapskouwe'', zoas 't te vienen is bie de grote [[Nederlaand|Nederlaanse]] [[heed]]velden.
+Sommigen [[stalle]]n wonnen oek een kouwe eneumd. Mit name een [[opstal]] veur [[schaop|schapen]], de ''schaapskouwe'', zoas 't te vienen is bie de grote [[Nederlaand|Nederlaanse]] [[heed (vegetasie)|heedvelden]].
 
 De kouwe is veurnamelijk een nach- en [[wienter]]verblief. Mit mooi weer wil 't nog wel es veukoemen dat de [[scheper]] besluut de nach op 't veld over te blieven.
 
