[[heed]] → [[heed (vegetasie)|heed]] ([[heed (vegetasie)]])

--- a/Zaandverstuving.mw
+++ b/Zaandverstuving.mw
@@ -1,7 +1,7 @@
 [[Image:Zandverstuiving hoge veluwe 4.jpg|right|260px|thumb|Zaandverstuving "De Pollen" op [[De Hoge Veluwe]]]]
 [[Image:Kootwijkerzand 2.jpg|right|260px|thumb|'t [[Kootwiekerzaand]]]]
 [[Image:Zandverstuiving hoge veluwe 1.jpg|thumb|right|260px|Een zaandverstuving mit nieje dunen]]
-Een '''zaandverstuving''' is een open plekke in de [[heed]] of de [[dune]]n waor gien enkele begreuiing veurkump en waor 't zaand deur de [[wiend]] en 't [[waoter]] ([[regen]]bujen) versteuven wonnen. Ech stuvend zaand kump in [[West-Europa|Noordwest-Europa]] haos neet veur. In Nederlaand bin der nog een paor.
+Een '''zaandverstuving''' is een open plekke in de [[heed (vegetasie)|heed]] of de [[dune]]n waor gien enkele begreuiing veurkump en waor 't zaand deur de [[wiend]] en 't [[waoter]] ([[regen]]bujen) versteuven wonnen. Ech stuvend zaand kump in [[West-Europa|Noordwest-Europa]] haos neet veur. In Nederlaand bin der nog een paor.
 
 ==Ontstaon==
 Zaandverstuvingen ontstungen in 't vlejen deurdat de velden te veul of-eplagd wönnen. De heedplaggen wönnen bieveurbeeld gebruuk um een [[plaggehutte]] te bouwen en in de [[potstal]]. As der te veul plaggen of-ehaold wönnen, kon de heed zich neet meer herstellen. Aandere schaodelijke activiteiten wanen 't riejen mit te veul karren, en 't laoten grezen van te veul schapen.
