[[heed]] → [[heedfemilie|heed]] ([[heedfemilie]])

--- a/Bosbezen.mw
+++ b/Bosbezen.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Vaccinium corymbosum(01).jpg|thumb|270px|Blauwe bezen]]
-De '''bosbezen''' ([[Latien]]: ''Vaccinium'') bin [[plaanten|planten]] die beheuren tot de [[heed]]femilie (Ericaceae).
+De '''bosbezen''' ([[Latien]]: ''Vaccinium'') bin [[plaanten|planten]] die beheuren tot de [[heedfemilie]] (Ericaceae).
 
 == Taxonomie ==
 * Subgenus '''''Oxycoccus''''': [[Veenbees|Veenbezen]] 
