[[heed]] → [[heed (vegetasie)|heed]] ([[heed (vegetasie)]])

--- a/Gele_gis.mw
+++ b/Gele_gis.mw
@@ -3,7 +3,7 @@
 De '''gele gis''' (oek wel: 't ''gele gisjen'' of de ''gis''; [[Latien]]: ''Emberiza citrinella'') is een zangvoegel, uut de femilie van de [[Emberizidae]]. 't Is een stand- en zwaarfvoegel die iets groter is as de [[mors]]. Een gele gis kan oengeveer 16,5 centimeter groot worren. De gele gis leeft heufdzakelijk van [[zaod (plaante)|zaojen]] mar in de breuitied oek van wurmen en insecten. 't Nest van de gele gis zit op de groend tussen hoge [[plaanten|planten]] en struken. 
 
 == Verspreiding ==
-De gele gis komt veur in [[heed]] begreuid mit veer uut mekaar staonde bomen, in bosranden, wegbaarmen en in [[hegge|hegen]] en [[houtwalle]]n. Deur 't verdwienen van hegen en houtwallen is de gele gis in de twientigste eeuw staark achteruut-egaon. De gele gis stung op de [[Nederlaand|Nederlanse]] rooie liest van voegels, mar deurdat de popelaosie zien eigen an 't herstellen is, staot disse voegel niet langer op de rooie liest.
+De gele gis komt veur in [[heed (vegetasie)|heed]] begreuid mit veer uut mekaar staonde bomen, in bosranden, wegbaarmen en in [[hegge|hegen]] en [[houtwalle]]n. Deur 't verdwienen van hegen en houtwallen is de gele gis in de twientigste eeuw staark achteruut-egaon. De gele gis stung op de [[Nederlaand|Nederlanse]] rooie liest van voegels, mar deurdat de popelaosie zien eigen an 't herstellen is, staot disse voegel niet langer op de rooie liest.
 
 == Nedersaksisch ==
 * [[Drèents]]: ''geelborstien, geelvink, knieper''
