[[heed]] → [[heed (vegetasie)|heed]] ([[heed (vegetasie)]])

--- a/Petrieze.mw
+++ b/Petrieze.mw
@@ -7,7 +7,7 @@ Een volwassen petrieze is ongeveer 30 centimeter groot. D'r poten bin gries, de 
 == Leefgebied ==
 De petrieze is een [[standvoegel]] dee in 't overgrote deel van [[Europa (continent)|Europa]] veurkump, waoronder in [[Nederlaand]] en [[België]]. Uutzonderingen bin 't [[Iberisch schiereilaand]], [[Scandinavië|Noord-Scandinavië]] en [[Griekenlaand|Zuud-Griekelaand]]. 
 
-Petriezen koemen veural in kleinschaolige open terreinen veur, zoas weilanen, akkers en braokliggende terreinen mit houtwallen of [[hège]]n. Ze breujen op 't [[gres]], [[heed]], in [[moor (toponiem)|moerassen]], dunen en lege bargen. 
+Petriezen koemen veural in kleinschaolige open terreinen veur, zoas weilanen, akkers en braokliggende terreinen mit houtwallen of [[hège]]n. Ze breujen op 't [[gres]], [[heed (vegetasie)|heed]], in [[moor (toponiem)|moerassen]], dunen en lege bargen. 
 
 == Rooie Lieste ==
 De petrieze steet op de Rooie Lieste van bedreigen en kwetsbaore voegelsoorten in Nederlaand. De petrieze hef de staotus 'kwetsbaor'. 't Antal petriezen in Nederlaand is stark of-eneumen. Op dit mement bin der nog mar 10.000 brotpaoren. 
