--- a/Doornestruke.mw
+++ b/Doornestruke.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Ulex europaeus13.jpg|thumb|275px|Doornestruke]] 
 [[Ofbeelding:Illustration Ulex europaeus0.jpg|thumb|275px|Doornestruke]]
-De '''doornestruke''' ([[Latien]]: ''Ulex europaeus'') is een giftige struke uut de [[vlinderbloemefemilie|vlinderbloemenfemilie]] (Fabaceae), 't is giftig deurdat 't [[cytisine]] bevat. De doornestruke steet op de Nederlaanse Rooie Lieste van plaanten as vrie zeldzaam en maotig of-eneumen. De struke hef (zoas de naam al angeef) doorns, 't is een greunblievende struke dee plaoselijk veurkump op zaandgrond, [[heed]] of in de [[dune]]n. In pertie gebieden bin ze iezelig zeldzaam. [[Iemn|Biejen]] koemen vake of op de goudgele, geurende bloemen. Bie anraking schieten de bloemen [[stuufmeel]] of op de bezeukende [[insektn|insekken]]. Rechop greuiend kan de doornestruke een heugte bereiken van dreje meter, mar de struke blif op onbeschutten of begrezen plekken een stuk leger.
+De '''doornestruke''' ([[Latien]]: ''Ulex europaeus'') is een giftige struke uut de [[vlinderbloemefemilie|vlinderbloemenfemilie]] (Fabaceae), 't is giftig deurdat 't [[cytisine]] bevat. De doornestruke steet op de Nederlaanse Rooie Lieste van plaanten as vrie zeldzaam en maotig of-eneumen. De struke hef (zoas de naam al angeef) doorns, 't is een greunblievende struke dee plaoselijk veurkump op zaandgrond, [[heed (vegetasie)|heed]] of in de [[dune]]n. In pertie gebieden bin ze iezelig zeldzaam. [[Iemn|Biejen]] koemen vake of op de goudgele, geurende bloemen. Bie anraking schieten de bloemen [[stuufmeel]] of op de bezeukende [[insektn|insekken]]. Rechop greuiend kan de doornestruke een heugte bereiken van dreje meter, mar de struke blif op onbeschutten of begrezen plekken een stuk leger.
 
 ==Blaojen==
 De blaojen bin ereduceerd tot greune, naoldvormige doorns van 1,5 tot 2,5 centimeter lange. Ze bin diep-egreuf en stief. Jonge blaojen bin dreetallig en in dat staodium nog zach en veur dieren eetbaor.
