--- a/Loenen_(Apeldoorne).mw
+++ b/Loenen_(Apeldoorne).mw
@@ -4,7 +4,7 @@ Loen besteet uut twee delen, die in 't vleden onder de namen ''Lona'' en ''Sulva
 
 ==Beziensweerdigheden==
 * Krek in 't noorden van Loen liggen de (kunsmaotige) Loense watervallen, mit 't grootste heugteverschil van Nederlaand. 
-* In 't zuudwesten van Loen lig 't [[bos]]- en [[heed]]gebied de [[Loenermark]] mit heur schaopskooi en in 't zuden daorvan de [[Zilvense heed]] waor de iekbaosis van 't Nederlaanse laandmeetkundige driehoeksnet is. 
+* In 't zuudwesten van Loen lig 't [[bos]]- en [[heed (vegetasie)|heed]]gebied de [[Loenermark]] mit heur schaopskooi en in 't zuden daorvan de [[Zilvense heed]] waor de iekbaosis van 't Nederlaanse laandmeetkundige driehoeksnet is. 
 * In 't noordoosten van Loen lig [[Kesteel Ter Horst]].
 
 [[Kattegerie:Oost-Veluws artikel]]
