[[heed]] → [[heed (vegetasie)]]

--- a/Et_blauwe_klokkien.mw
+++ b/Et_blauwe_klokkien.mw
@@ -8,7 +8,7 @@ Et blauwe klokkien bluuit van [[juli]] tot [[september]] mit allienstaonde of tw
 
 De vrucht is een [[deusvrucht]]. De kleine, lochte [[zaod (plaanten)|zaoden]] bin ongevleugeld.
 
-De plaante komt veur in [[blauwgröslaand]], tussen kot grös, [[heed|heide]] en veenmoerassen op natte, zoere grond.
+De plaante komt veur in [[blauwgröslaand]], tussen kot grös, [[heed (vegetasie)|heide]] en veenmoerassen op natte, zoere grond.
 
 Et blauwe klokkien is een gastheer veur et [[gentiaanblauwgien]] (''Maculinea alcon''), die de eities ofzet op de bloemen die nog niet eupend bin. Ok de [[rupse|rupsen]] van de motten ''[[Nemophora violaria]]'' ([[Lepidoptera]], [[Adelidae]]) en ''[[Stenoptilia pneumonathes]]'' ([[Lepidoptera]], [[Pterophoridae]]) kommen op et blauwe klokkien veur.
 
