--- a/Vierhouten.mw
+++ b/Vierhouten.mw
@@ -47,7 +47,7 @@ De Elspeetse Heide is argeologies van grote waorde, deur anwezigheid van oude ei
 
 ===Vierhoutense Heide===
 
-Ut laandgoed [[Vierhoutense Heide]], een gebied met [[bos]], een stuk [[heide]] en een [[zandverstuuving]]. 
+Ut laandgoed [[Vierhoutense Heide]], een gebied met [[bos]], een stuk [[heed (vegetasie)|heide]] en een [[zandverstuuving]]. 
 Het 120 [[hectare]] greute [[landgoed]] is een prachtig waandelgebied en vrie te bekieken.
 Het is een overbliefsel van een uut-estrekt heide- en stuufzandlandschap dat nu grotendeels is bebost.
 
@@ -69,7 +69,7 @@ Veur de [[Tweede Wereldoorlog]] was het een proeftuun met [[moeras]] en een uut-
 Nao de oorlog lag de tuun er jaorenlang verwaarloosd en overwoekerd bie. In de jaoren 90 hen vriewiligers de heemtuun weer in ere hersteld.
 De tuun is vernoemd naor [[Eli Heimans]], onderwiezer en netuurbescharmer.
 
-Op het terrein bevienden zich onder meer wallen met beuk-n en eik-n, een naoldboombosjen, een vaorenhoek, een [[heide]]heuvel, een [[blauwgres]]land, een bloemenwei, een [[leemkule]], een [[rogge]]akker, een moerasjen en een [[muurtuun]]. Deur de tuun lup de Nunbeek, die een grote en kleine viever van waater veurziet.
+Op het terrein bevienden zich onder meer wallen met beuk-n en eik-n, een naoldboombosjen, een vaorenhoek, een [[heed (vegetasie)|heide]]heuvel, een [[blauwgres]]land, een bloemenwei, een [[leemkule]], een [[rogge]]akker, een moerasjen en een [[muurtuun]]. Deur de tuun lup de Nunbeek, die een grote en kleine viever van waater veurziet.
 Bie de ingang van de tuun staon vitrines met een verzaomeling nesten met eiers en merkwaordige houten greuisels uut de naotuur.
 
 ==Culinaire paorel==
