--- a/Oostfraislaand.mw
+++ b/Oostfraislaand.mw
@@ -6,7 +6,7 @@
 Van oldsheer beston Oostfraislaand oet t gebied tuzzen [[Ems (revier)|Ems]] en [[Jade]]. Der wuir [[Freesk|Frais]] proat en de Fraise kultuur wuir der volgd. Dou t Fraise riek (''[[Magna Frisia]]'') oetmekoar veul, schaaide [[Grunnen (provìnzie)|Grunnen]] (de [[Ommelanden]]) Oostfraislaand en [[Vreesland|Westlauwersfraislaand]]. Oostfraislaand kreeg n aaigense [[graof|geve]] en wuir n dail van t [[Heilig Roomse riek|Haileg Roomse riek]]. Oostfraislaand beston dou oet de tegenswoordege [[landkreis|laandkraitsen]] Emden, Aauwerk, Leer en Wittmond. De tegenswoordege laandkraitsen [[Friesland (kreis)|Fraislaand]] en [[Wilhelmshaven|Wilhelmshoaven]] heurden hier nait meer bie. Dou t [[koninkriek Hollaand|keunenkriek Hollaand]] zoch oetbraaide deur Oostfraislaand te verovern heurden dizze kraitsen der anders wel bie. Doch vuilen de mìnsken oet de kraitsen Friesland en Wilhelmhoaven zoch gain Frais.
 
 == Laandskop ==
-t Laandskop van Oostfraislaand wordt kenmaarkt deur [[heide|haidevelden]], [[grasveld|maarken]], [[veenkolonie|klainkolonien]] en [[dunen]] op de wadden. De laandskopstypen binnen hail dudelk weer te vinden ien de ploats -en gemaintenoamen as Wiesmoor, Moormerland, Großheide en Marschland.
+t Laandskop van Oostfraislaand wordt kenmaarkt deur [[heed (vegetasie)|haidevelden]], [[grasveld|maarken]], [[veenkolonie|klainkolonien]] en [[dunen]] op de wadden. De laandskopstypen binnen hail dudelk weer te vinden ien de ploats -en gemaintenoamen as Wiesmoor, Moormerland, Großheide en Marschland.
 
 == Kultuur ==
 Binnen [[Duutslaand]] het Oostfraislaand n dudelk aaigense identiteit. Veul dingen dij ien [[Grunnen (provìnzie)|Grunnen]] of [[Vreesland|Westlauwersfraislaand]] bruuk worden, bruukt man ook ien Oostfraislaand. 
