[[heide]] → [[heed (vegetasie)|heide]] ([[heed (vegetasie)]])

--- a/Geskiedenis_van_den_Achterhook.mw
+++ b/Geskiedenis_van_den_Achterhook.mw
@@ -2,7 +2,7 @@
 Een oaverzicht van de '''geskiednis van den Achterhook''':
 
 ==Prehistorie==
-Et landschap van den [[Achterhook]] in de prehistorie was n woost en moeilek toogankelek gebeed, bestoand oet [[dekzaandrug]]gen, uutlopers van n [[Pleistoceen|diluvioal]] heugtevlak an Duutse kante. Völle [[Bekke|bekken]] streumt van oost noar west en voodt nen laeger eleagen strook van brookwoold en [[veane]] an de westkante van den Achterhook, den nen moeilek te nemmen mure vormden veur toogang vanoet et westen. Op de hoger eleagen groanden kwamen [[bos]] en [[heide]] veur. Dizze heide is doar ontstoan deur menseleke bemeujenis, deur et loaten begröazen deur [[Domesticatie|domesticeerd]] vee.
+Et landschap van den [[Achterhook]] in de prehistorie was n woost en moeilek toogankelek gebeed, bestoand oet [[dekzaandrug]]gen, uutlopers van n [[Pleistoceen|diluvioal]] heugtevlak an Duutse kante. Völle [[Bekke|bekken]] streumt van oost noar west en voodt nen laeger eleagen strook van brookwoold en [[veane]] an de westkante van den Achterhook, den nen moeilek te nemmen mure vormden veur toogang vanoet et westen. Op de hoger eleagen groanden kwamen [[bos]] en [[heed (vegetasie)|heide]] veur. Dizze heide is doar ontstoan deur menseleke bemeujenis, deur et loaten begröazen deur [[Domesticatie|domesticeerd]] vee.
 
 Op völle plaetse in den Achterhook bunt sporen an-etroffen van neaderzettingen uut de [[prehistorie]]. Et is ondudelek of verskillende plaetse in de löp van de [[Millennium|millennia]] vast bewond ewest bunt, of dat der sproake is ewest van ingriepende volksverhuzingen en/ of vi-jandigheden. Namen van volken, woarvan an-enommen wödt dat zie den Achterhook bewond hebt, bunt op de riege in tied: [[Bructeren]] en [[Chamoaven]] ([[Germoanen|Germaanse stammen]], later erekkend tot de [[Franken]]), en noa de [[grote volksverhuzing]] de [[Saksen (volk)|Saksen]].
 
