--- a/Oaverdeenkel.mw
+++ b/Oaverdeenkel.mw
@@ -3,7 +3,7 @@
 '''Oaverdeenkel''' is n doarp in t zuud-oostn van [[Tweante]] teegn de [[Duutslaand|Duutse]] greanze, in de gemeente van [[Losker]]. t Ligt an de [[Deenkel]] en hef ongevear 3760 inwonners.
 
 ==Geskiedenisse töt 1890==
-Op t dreeleandepeunt van [[Nedersaksen]], [[Westfalen]] en Tweante ligt Oaverdeenkel. t Is umgeewn duur [[heide|heed]] en bos. Teegn de greanze an lear t ''Tieknvenne'' met nen plas den at vol egröaid was met reet, en den at in latere joarn dreuge is elegd. Kort oawer de greanze lear n groot zaandgebeed. An de Ruhenbergerbekke, den at [[Neerlaand]] binn keump, lignt n antal boernoarvn: Welpelo, Beernink, Luijerink en Nijland.
+Op t dreeleandepeunt van [[Nedersaksen]], [[Westfalen]] en Tweante ligt Oaverdeenkel. t Is umgeewn duur [[heed (vegetasie)|heed]] en bos. Teegn de greanze an lear t ''Tieknvenne'' met nen plas den at vol egröaid was met reet, en den at in latere joarn dreuge is elegd. Kort oawer de greanze lear n groot zaandgebeed. An de Ruhenbergerbekke, den at [[Neerlaand]] binn keump, lignt n antal boernoarvn: Welpelo, Beernink, Luijerink en Nijland.
 
 An de aandere kaante, woer at n Deenkel löp, he'j oonder mear de oarven Roterink, Lakerink, Elferink en Ter Denge. Disse oarven wordt al eneumd in t Moarkebook van Losker in [[1533]], woerin al edoan wörd van Oaverdeenkelse boern. Um [[1200]] steet n naamn Oaverdeenkel of Oaverdeenkelseveald al in de beuke. t Was n verdichte [[noaberskop]], net as op zovölle plaatsn in Tweante.
 
