/* Bekeande inwonners */ [[Fred Rutten]] ([[PSV (voetbal)|PSV]])

--- a/Oaverdeenkel.mw
+++ b/Oaverdeenkel.mw
@@ -16,7 +16,7 @@ In [[1907]] har Oaverdeenkel al 1600 inwonners, en wör van ne kleaine noabersko
 
 ==Bekeande inwonners==
 *[[Gert Timmerman]] (oold-muzikaant)
-*[[Fred Rutten]] (oold-trainer van [[FC Twente]] en rechtevoort [[Schalke '04]])
+*[[Fred Rutten]] (oold-trainer van [[FC Twente]] en [[Schalke '04]], rechtevoort van [[PSV (voetbal)|PSV]])
 
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Plaatse in Oaveriessel]]
