/* Plaotiesriege */ {{commonscat|Heath}}

--- a/Heed_(laandschap).mw
+++ b/Heed_(laandschap).mw
@@ -67,7 +67,7 @@ Ofbeelding:FloweringHeath-1.JPG|Bleuiende heed bie [[Ede]]
 ===Panorama===
 [[Ofbeelding:FloweringHeath-1.JPG|thumb|770px|left|Bleuiende heed bie Ede]]
 <br clear="all" />
-
+{{commonscat|Heath}}
 {{Dia|Disse pagina is eschreven in 't [[Nunspeets]]}}
 
 [[Kattegerie:West-Veluws artikel]]
