Oops, [[heed (vegetasie)]]velden → [[heed (vegetasie)|heedvelden]]

--- a/Oldebroek.mw
+++ b/Oldebroek.mw
@@ -20,7 +20,7 @@ webstee = [http://www.oldebroek.nl/ www.oldebroek.nl] |
 }}
 '''Oldebroek''' ({{Audio|102_Oldebroek.ogg|<small>uutspraak</small>}}) is een ploaste en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand|Nederlaonse]] [[pervincie|previnsie]] [[Gelderlaand|Gelderlaond]]. Oldebroek lig in uterste noorden van de [[Veluwe]] en is ok de noordelijkst liggende gemiente van Gelderlaond. De gemiente Oldebroek had op [[1 november]] [[2007]] 22.782 inwoners en 't hef een oppervlakte van 98,78 [[vierkaante kilemeter|km²]].
 
-Oldebroek grens an 't [[Overiessel]]se [[Kampen (Overiessel)|Kampen]] en an de previnsie [[Flevolaand|Flevolaond]]. De netuur in Oldebroek is ok arg ofwisselend, ie hebt [[heed (vegetasie)]]velden, [[bos]]sen mar ok [[zaandverstuving|zaondverstoevings]] en veule meer.
+Oldebroek grens an 't [[Overiessel]]se [[Kampen (Overiessel)|Kampen]] en an de previnsie [[Flevolaand|Flevolaond]]. De netuur in Oldebroek is ok arg ofwisselend, ie hebt [[heed (vegetasie)|heedvelden]], [[bos]]sen mar ok [[zaandverstuving|zaondverstoevings]] en veule meer.
 
 ==Geschiedenisse==
 Waor de name ''Oldebroek'' vandan kump is niet mit honderd percent zekerheid te zegen. Sommigen geschiedeniskenners denken dät Oldebroek zien name te danken hef an de vestiging van [[Hollaand|Hollaonders]] in 't vere vleden (''Hollaonderbroek''), mar der bestaon ok een bulte aondere theorieën. 
