[[Stoefzaand]] → [[Stoefzaand (Drenthe)|Stoefzaand]] ([[Stoefzaand (Drenthe)]])

--- a/Zuudwest-Zuud-Drèents.mw
+++ b/Zuudwest-Zuud-Drèents.mw
@@ -70,9 +70,9 @@
 |
 * [[Vening]]
 * [[Pesse]]
-* [[Stoefzaand]]
+* [[Stoefzaand (Drenthe)|Stoefzaand]]
 * [['t Oogeveine]]
-* [[Zuudwolde_(Drenthe)|Zuudwolde]]
+* [[Zuudwolde (Drenthe)|Zuudwolde]]
 * [[Aansen]]
 * [[Fluitenbarg]]
 * [[Koldervene]]
