--- a/Kasteel_Brederode.mw
+++ b/Kasteel_Brederode.mw
@@ -11,7 +11,7 @@ Noa de verzoening tussen de Brederodes en de Graven, is et in [[1354]] wier herb
 
 Umdat de Hoken in [[1426]] [[Hoarlem]] beleagerden verwoostten de Kabeljauwen et zudeleke deel van et kasteel. Et wodden Willem van Brederode verboaden et kastele te "verstarken, vastmaken of te bolwarken" woardeur et neet harsteld kon wodden. Uutendelek wodden in [[1464]] toch et noordeleke deel wier hersteld. Tiedens den [[opstaand van et Keze- en Broodvolk]] in [[1492]] wodden et kasteel plunderd deur Duutse soldoaten. Vanaf dee tied wöd et neet meer bewond.
 
-Tiedens et [[beleg van Hoarlem]] in [[1573]] wodden et kastele plunderd en in braand estokken deur [[Spanje|Spaanse]] soldoaten. Vervolgens veel de [[ruïne]] ten prooi an et oprukkende [[stoefzaand]] van de dunen.
+Tiedens et [[beleg van Hoarlem]] in [[1573]] wodden et kastele plunderd en in braand estokken deur [[Spanje|Spaanse]] soldoaten. Vervolgens veel de [[ruïne]] ten prooi an et oprukkende [[zaandverstuving|stoefzaand]] van de dunen.
 
 In [[1679]] kwamp [[Wolfert van Brederode]] oet de tied, den lesten heer van Brederode, woarmet de ruïne verveel an de graven van Hollaand, dee neet meer bestoanden en wierden op-evolgd deur den [[Nederlaand|stoat der Nederlaanden]]. In de 19de eeuwe was de ruïne éne van de eerste bouwwarken dee in opdracht van den stoat wodden restaurierd en wodden et eersten [[rieksmonument]].
 
