*Empty MediaWiki Message*

--- a/Klingon_(sproak).mw
+++ b/Klingon_(sproak).mw
@@ -138,6 +138,57 @@ Dit meervoud könt broekt wörden biej elk mensaktig weazn woarme'j n nörmoale 
 
 <''Duy''> betekkend "af-ezant", <''Duypu' ''> betekkend "af-ezantn".
 
+
+'''-Du' ''' meervoud veur lichoamsdeiln
+
+Dit meervoud wor ebroekt a'j t oawer meardre lichoamsdeiln hebt van 'nzelfden soart. Det kan zoowal van proatnde weazns as van dearn of pöppn wean.
+
+<''qam''> betekkend "voet", <''qamDu' ''> betekkend "voetn".
+
+<''mIn''> betekkend "eug", <''mInDu' ''> betekkend "eugen".
+
+
+'''-mey''' Dit meervoud wor ebroekt a'j t oawer ichs hebt det nich ichs van de oawerstoande meervoudsvörme is, dus iegnlik biej aale oandre wöarde.
+
+<''mID''> betekkend "kolonie", <''mIDmey''> betekkend "kolonien".
+
+<''yuQ''> betekkend "planeat", <''yuQmey''> betekkend "planeatn".
+
+
+Dit meervoudsaaktervoogsel kö'j ok ebroekn a'j t oawer weazns dee wal proat könt hebt, moar den ebroekt iej t ömme an te dreain de'j t zegt det zee oawer ne ploats versmeard zeent.
+
+<''puq''> betekkend "wich".
+
+<''puqpu' ''> betekkend "wichn".
+
+<''puqmey''> betekkend "wichn oawer de heale ploats versmeard".
+
+
+t Aaktervoogsel '''-mey''' kö'j nich ebroekn biej lichoamsdeiln, moar d'r zeent wal n oantal Klingondeechtrs dee disse reagl an stökn hoawn en in öare edichtn deengn skriewt as <''tIqmey''>, wat "heartn oawer de heale ploats versmeard" betekkend.
+
+Verder zeent d'r ok noch wöarde i't Klingon dee i'n meervoudsvorm mit n oandre woard oandrseploatst wor, zooas aal eardr is ezegd.
+
+<''ray' ''> betekkend "doeln".
+
+<''cha''> betekkend "torpedoos".
+
+<''chuyDaH''> betekkend "boegskroewn".
+
+D'enkelvoudsvörme van disse zeent:
+
+<''DoS''>
+
+<''peng''>
+
+<''vIj''>
+
+
+Biej disse loatste enkelvoudsvörme kö'j wal t aaktervoogsel '''-mey''' ebroekn ömme an te geawn de't meervoud d'rvan oawer ne heale ploats versmeard is.
+
+<''DoSmey''> betekkend "doeln oawer de heale ploats versmeard".
+
+== Tiep 3: Kwalifikoasies ==
+
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Fiksie]]
 [[Kattegerie:Kunsttaol]]
