*Empty MediaWiki Message*

--- a/Klingon_(sproak).mw
+++ b/Klingon_(sproak).mw
@@ -187,7 +187,7 @@ Biej disse loatste enkelvoudsvörme kö'j wal t aaktervoogsel '''-mey''' ebroekn
 
 <''DoSmey''> betekkend "doeln oawer de heale ploats versmeard".
 
-=== Tiep 3: Kwalifikoasies ===
+==== Tiep 3: Kwalifikoasies ====
 
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Fiksie]]
