/* Hoop (stapel van bijv. bladeren) */

--- a/Nedersaksisch_H.mw
+++ b/Nedersaksisch_H.mw
@@ -219,7 +219,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit H begunt''' oet 't [[Neders
 **''bult''
 **''belt'' (veroolderd)
 **(mest)''vaalt''
-**''rel'' (langen bult van heui op t laand)
+**''ril(le)'' (langen bult van heui op t laand)
 *[[Veluws]]: 
 **''bult{{small()|e}}''
 **''pol{{small()|le}}'' (zoas in: ''[[eemtepol|eemtepol{{small()|le}}]]'')
