*Empty MediaWiki Message*

--- a/Vaor.mw
+++ b/Vaor.mw
@@ -40,6 +40,7 @@ In [[religie|rillegieuze]] termen kan ''Vaor'' kan oek verwiezen naor [[God]] (d
 [[en:Father]]
 [[eo:Patro]]
 [[es:Padre]]
+[[et:isa]]
 [[fa:پدر]]
 [[fi:Isä]]
 [[gan:爺]]
