--- a/Neosassisme.mw
+++ b/Neosassisme.mw
@@ -118,6 +118,7 @@ Hieroonder steet ne alfabetiseerde lieste van neosassismen (disse wöarde kunnen
 **''luliezer''
 **''kuieriezer''
 **''kuierdroad''
+**''knokkelbot'' (mobiel)
 *[[tondeuse]]: ''blearskeare''
 *[[trompet]]: ''knetterheurntjen''
 
