*Empty MediaWiki Message*

--- a/Vaor.mw
+++ b/Vaor.mw
@@ -3,6 +3,8 @@ Een '''vaor''' is de [[man]]nelijke ouwer van een [[kiend]]. 't Beeld van vaorsc
 
 In [[religie|rillegieuze]] termen kan ''Vaor'' kan oek verwiezen naor [[God]] (de ''Vaor'', de [[Jezus Christus|Jonge]] en de [[Heilige Geest|Heilige Gees]]).
 
+Naos de biologische en rillegieuze term besteet der oek 'n [[recht|juridische]] benaodering veur 'vaorschap'. Zo ku'j as neet biologische vaor toch juridische vaor weden van 't kiend van de vrouw waor a'j mit etrouwd bin. Daornaos kan de biologische vaor juridisch zien vaorschap ontkennen. Veural tegenwoordig, noe echtscheidingen en tweede huwelijken neet vremd bin, mot steeds vaoker gebruuk emaokt worden van de juridische uutleg van 't woord 'vaor'. 
+
 == Zie oek ==
 * [[Moor (meens)|Moor]]
 * [[Kiend]]
