--- a/Vaor.mw
+++ b/Vaor.mw
@@ -11,7 +11,14 @@ Naos de biologische en rillegieuze term besteet der oek 'n [[recht|juridische]] 
 
 == Nedersaksisch ==
 * [[Drèents]]: ''va'', ''vaar'', ''vae'', ''vao{{small()|der}}'', ''vaoi'', ''vaor''
-* [[Grunnegs]]: ''voa{{small()|der}}'', ''pa{{small()|bbe}}''
+* [[Grunnegs]]: 
+**voader
+**voa (informeel)
+**voar
+**pa
+**pabbe (informeel)
+**voaie (WEK)
+**olheer
 * [[Stellingwarfs]]: ''heit'', ''pa'', ''va''
 * [[Tweants]]: 
 ** ''vaar''
