--- a/Moor_(meens).mw
+++ b/Moor_(meens).mw
@@ -35,6 +35,7 @@ De relasie van een moor mit heur kienders wonnen an-eduud mit 't woord ''[[moors
 ** ''mem<small>(</small>me<small>)</small>'' 
 ** ''moe<small>(</small>ke<small>)</small>'' 
 ** ''moetje'' (informeel)
+** ''olmìns(k)''
 | valign=top |
 * [[Stellingwarfs]]: 
 ** ''mem''
