--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -75,7 +75,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit V begunt''' oet 't [[Neders
 **''pa''
 **''pabbe'' (informeel)
 **''voaie'' ([[WEK]])
-**''olheer''
+**''olheer'' <small>(informeel, en maisttieds allenneg as der over aine zien aigen voader proat wordt)</small>
 * [[Sallaans]]: ...
 * [[Stellingwarfs]]: 
 **''heit''
