--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -410,7 +410,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''mem{{small()|me}}''
 **''moe{{small()|ke}}''
 **''moetje'' (informeel)
-**''olmìns(k)''
+**''olmìns(k)'' <small>(informeel, en maisttieds allenneg as der over aine zien aigen mouder proat wordt)</small>
 | valign=top |
 * [[Sallaans]]: ...
 * [[Stellingwarfs]]: 
