*Empty MediaWiki Message*

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -1,347 +1,131 @@
 '''Grunnegse woorden dij begunnen mit A''' oet t [[Grunnegs woordenbouk]].
 
-{| {{prettytable}} width="60%"
-|- style="background: #efefef;"
-! width="15%" |Grunnegs woord
-! width="30%" |Alternoatief
-! width="30%" |Meervold/ bv. nmw.
-! width="30%" |Nederlaands
-! width="50%" |Opmaarken
-|-
-|aai
-|
-|aaier
-|ei
-|Ien t meervold ook ''zaadballen'' as betaikenis
-|-
-|[[Stoark|aaiber]]
-|aaibert
-|aaibers, aaiberts
-|ooievaar
-|
-|-
-|aaiberbek
-|aaiberblom, aaiberbloum
-|aaiberbekken, aaiberblommen, aaiberbloumen
-|gele lis
-|
-|-
-|aaid
-|aaltieds
-|
-|altijd
-|
-|-
-|aaid
-|aaide
-|aaiden
-|eg
-|laandbaauwraaive
-|-
-|aaiden
-|
-|
-|eggen
-|
-|-
-|aaidoor
-|aaierdoor, door
-|aaidoren
-|eierdooier
-|
-|-
-|aaierjong
-|
-|aaierjongen
-|jongste knecht
-|bie n herenboer
-|-
-|aaierproem
-|aaierproeme, aaierpruum (wek)
-|aaierproemen, aaierprumen
-|grote pruim
-|
-|-
-|aailaand
-|
-|aailanden
-|eiland
-|
-|-
-|Aailaand
-|Skiermunnekoog, Schiermunnekoog
-|
-|Schiermonnikoog
-|Aailaand is t aailaand en Schiermunnekoog is de gemainte en de ploats
-|-
-|aailoof
-|
-|aailoven
-|klimop
-|
-|-
-|aaisk
-|aais
-|aaisken, aaisen
-|eis
-|
-|-
-|aaisken (ww)
-|aaisen
-|
-|eisen
-|
-|-
-|aal
-|
-|aal, alle
-|al, alle, elke
-|
-|-
-|aalmoal
-|apmoal
-|
-|allemaal
-|
-|-
-|aanbetern
-|
-|
-|langzaam beter worden
-|
-|-
-|aander
-|ander
-|andere(n)
-|ander
-|
-|-
-|aander
-|volgende
-|
-|volgende
-|allìnd bie tied
-|-
-|aanders
-|aans
-|
-|anders
-|
-|-
-|aandij
-|aangrui
-|
-|groei (zn)
-|
-|-
-|aangoal
-|aal
-|
-|steeds, voortdurend
-|
-|-
-|aanlangen
-|baaiden
-|
-|geven, overhandigen
-|
-|-
-|aanpitjen
-|aanpeerdjen
-|
-|stimuleren, aanzetten tot
-|
-|-
-|aargens
-|aargendwoar
-|
-|ergens
-|
-|-
-|aargendwel
-|aine
-|gounend
-|iemand
-|Vroug-Nijgrunnegs
-|-
-|aargendhou
-|
-|
-|op een of andere manier
-|Vroug-Nijgrunnegs
-|-
-|aargendwenneer
-|oeit
-|
-|ooit
-|Vroug-Nijgrunnegs
-|-
-|aask
-|aaske
-|
-|as
-|
-|-
-|acht
-|aacht, aachte
-|
-|acht
-|getal
-|-
-|achter
-|aachter
-|
-|achter
-|
-|-
-|achterweegs
-|achterwegens
-|
-|achterwege
-|
-|-
-|admis
-|asmis, sums, sumtieds
-|
-|soms
-|Stadjeders
-|-
-|adìnlek
-|adìnliek(s)
-|
-|behoorlijk
-|
-|-
-|adrillen
-|
-|
-|allerheiligen
-|feestdag
-|-
-|affeer
-|waark
-|afferes, waarken
-|beroep
-|
-|-
-|aibels
-|hail, slim
-|
-|erg, zeer
-|
-|-
-|aigens
-|
-|aigense
-|eigen
-|
-|-
-|aigender
-|
-|aigenders
-|eigenaar
-|
-|-
-|aleer
-|vrouger, vrogger, dou
-|
-|vroeger
-|
-|-
-|allìnd
-|allenneg, alleneg, allaind
-|
-|alleen
-|
-|-
-|allozie
-|
-|allozies
-|horloge
-|
-|-
-|ain
-|aine, ein, een
-|
-|een
-|allìnd t getal "een", nait t lidwoord
-|-
-|aine
-|aargendwel
-|gounend
-|iemand
-|
-|-
-|ais
-|es, ains
-|
-|eens
-|
-|-
-|aiw
-|aive
-|aiwen, aiven
-|
-|-
-|aiweg
-|aiveg
-|aivege
-|eeuwig
-|
-|-
-|angel
-|
-|angels
-|hengel
-|t haile ding
-|-
-|angelgare
-|
-|angelgares
-|hengel 
-|allìnd de stok
-|-
-|antam
-|amtam
-|
-|probleemkind
-|
-|-
-|appel
-|abbel
-|appels, appellen
-|appel
-|-
-|appelbrij
-|appelmots
-|appelbrijs, appelmotsen
-|appelmoes
-|
-|-
-|appelgernoat
-|
-|appelgernoaten
-|granaatappel
-|
-|-
-|appelsien
-|appelsiene
-|appelsienen
-|sinaasappel
-|
-|-
-|as
-|
-|
-|als
-|
-|-
-|avvekoat
-|
-|avvekoaten
-|advocaat
-|
-|}
+==Aai==
+===Betaikenis 1===
+*'''Oetsproak''': /aɪ/
+*'''Meervold''': Aaier
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+**Tuudaai (kippenei)
+**Aaidoor (eierdooier)
+**Aaierjong (jongste knecht)
+**Aaierproem (dikke pruim)'
+**Aailoof (klimop, lett. eierblad)
+*'''Nederlaands''': ei
+*'''Heerkomst''': van t Proto-Germoanse ''ajjam'', meugelk van t Proto-Indo-Uropese ''ōwyóm''.
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': /aɪ/
+*'''Meervold''': aaier
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': teelbal
+*'''Heerkomst''': van t Proto-Germoanse ''ajjam'', van t Proto-Indo-Uropese ''ōwyóm''.
+*'''Vervougen''':
+
+===Betaikenis 3===
+*'''Oetsproak''': /aɪ/
+*'''Meervold''': aaier
+*'''Aander meugelkheden''': oog
+*'''Ôfgelaaide woorden''': 
+**aailaand (eiland)
+**Nördenaai (Nordeney, waddeneiland in de landkreis Aurich)
+*'''Nederlaands''': oog (oude geografische naam voor eiland; vergelijk Schiermonnik'''oog''', Jers'''ey''' en '''ei'''land)
+*'''Heerkomst''': van t Proto-Germoanse ''awjō'', van t Proto-Indo-Uropese ''əkʷā-''
+*'''Vervougen''':
+
+==Aaiber==
+*'''Oetsproak''': /aɪbər/
+*'''Meervold''': aaibers
+*'''Aander meugelkheden''': aaibert, eiber ([[NVL]], [[WEK]]), störk ([[WEV]])
+*'''Ôfgelaaide woorden''': 
+**Eibersburen/Aaibersboeren (ploats gem. Grodegast)
+**Aaiberbek (gele lis)
+**Aaibersblo(u)m (gele lis)
+*'''Nederlaands''': ooievaar
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+== Aaid ==
+===Betaikenis 1===
+*'''Oetsproak''': /aɪt/
+*'''Meervold''': -
+*'''Aander meugelkheden''': aaltied, aaltieds, immer (as man over t verleden proat)
+*'''Ôfgelaaide woorden''': aaids (altijd maar weer)
+*'''Nederlaands''': altijd
+*'''Heerkomst''': Van ''aal'' en ''tied''
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': /aɪt/
+*'''Meervold''': 
+**aaider (oldmoods)
+**aaiden (nijmoods)
+*'''Aander meugelkheden''': aaide ([[VEK]])
+*'''Ôfgelaaide woorden''': aaiden (eggen, werkwoord)
+*'''Nederlaands''': eg (landbouwgereedschap)
+*'''Heerkomst''': 
+*'''Vervougen''': -
+
+==Aailaand==
+===Betaikenis 1===
+*'''Oetsproak''': 
+*'''Meervold''': aailanden
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': eiland
+*'''Heerkomst''': Van ''aai'' en ''laand''
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': 
+*'''Meervold''': -
+*'''Aander meugelkheden''': Schiermunnekoog, Skiermunnekoog
+*'''Ôfgelaaide woorden''': 
+**Aailaander (inwoner van het eiland Schiermonnikoog)
+**Aailaanders (dialect van Schiermonnikoog; inwoners van het eiland Schiermonnikoog)
+*'''Nederlaands''': Schiermonnikoog (bijnaam)
+*'''Heerkomst''': Van 'aailaand'' (eiland). Schiermonnikoog ligt boven Groningen en was in het verleden, naast Borkum, het enige waddeneiland dat frequent door Groningers werd bezocht, waardoor het de koosnaam 'os aailaand' (ons eiland) kreeg.
+*'''Vervougen''':
+
+==Aaisk==
+*'''Oetsproak''': 
+*'''Meervold''': aaisken
+*'''Aander meugelkheden''': aais
+*'''Ôfgelaaide woorden''': aaisken (eisen, werkwoord)
+*'''Nederlaands''': eis
+*'''Heerkomst''': van t Oldsaksische ''ēscian'', van t Proto-Germoanse ''ayǝs-''.
+*'''Vervougen''':
+
+==Aal==
+*'''Oetsproak''': /ɔːl/
+*'''Meervold''': -
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+**aalmoal (allemaal)
+**aalweegs (steeds, tijdsuitdrukking, bv. ik leer aalweegs meer)
+*'''Nederlaands''': al, alle
+*'''Heerkomst''': van t Proto-Germoanse ''alnaz''.
+*'''Vervougen''':
+
+==Aalmoal==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': apmoal
+*'''Ôfgelaaide woorden''': apmoal (allemaal)
+*'''Nederlaands''': allemaal
+*'''Heerkomst''': van ''aal'' en ''moal''
+*'''Vervougen''':
+
+==Aaltied==
+*'''Oetsproak''': 
+*'''Meervold''': -
+*'''Aander meugelkheden''': aaltieds, aaid, immer (as man over t verleden proat)
+*'''Ôfgelaaide woorden''': aaltieds, aaid (altijd)
+*'''Nederlaands''': altijd
+*'''Heerkomst''': Van ''aal'' en ''tied''
+*'''Vervougen''':
 
 {{Grunnegs woordenbouk}}
 
