*Empty MediaWiki Message*

--- a/Thaisen.mw
+++ b/Thaisen.mw
@@ -1,2 +1,4 @@
+{{vort}}
+
 Thaizen is een dorpke ien de prevencie groningen
 Der woonen moar weing thaizingers ien Thaizen, sikkom 800 ienwoners telt het.
