*Empty MediaWiki Message*

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -127,6 +127,154 @@
 *'''Heerkomst''': Van ''aal'' en ''tied''
 *'''Vervougen''':
 
+==Aanbetern==
+*'''Oetsproak''': /æːmbeɪtərn/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': herstellen van ziekte
+*'''Heerkomst''': van ''aan'' en ''beter''
+*'''Vervougen''':
+**Ik beter aan
+**Doe beterst aan
+**Hai betert aan
+**Wie,joe,zie betern aan
+**Ik bin aanbeterd
+
+==Aander==
+===Betaikenis 1===
+*'''Oetsproak''': /æːndər/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+**aans (anders)
+**aanderzieds (aan de andere kant)
+*'''Nederlaands''': ander
+*'''Heerkomst''': van t Proto-Germoanse ''anþaraz''
+*'''Vervougen''':
+
+==Betaikenis 2==
+*'''Oetsproak''': /æːndər/
+*'''Meervold''': 
+*'''Aander meugelkheden''': kommende
+*'''Ôfgelaaide woorden''': 
+**aanderdoags (genitief van "morgen", bv. aanderdoagsoavends (morgenavond))
+**aandermoal (de volgende keer)
+*'''Nederlaands''': volgende (bij tijd, bv. aander week (volgende week))
+*'''Heerkomst''': van t Proto-Germoanse ''anþaraz''
+*'''Vervougen''':
+
+==Aandij==
+*'''Oetsproak''': /æːndæɪ/
+*'''Meervold''': aandijen
+*'''Aander meugelkheden''': aangrui
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': groei, aangroeing (zelfstandig naamwoord)
+*'''Heerkomst''': van ''aan'' en ''dij'' (groei, vergelijk ''uitdijen'')
+*'''Vervougen''':
+
+==aanlangen==
+*'''Oetsproak''': /æːnlæŋː/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**geven 
+**baiden
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': aangeven, aanrijken, aanbieden
+*'''Heerkomst''': van ''aan'' en ''langen'' (binnen handbereik brengen)
+*'''Vervougen''': 
+**Ik lang aan
+**Doe langst aan
+**Hai langt aan
+**Wie, joe, zai langen aan
+**Ik heb aanlangd
+
+==aanpeerdjen==
+*'''Oetsproak''': /æːmpɪtjən/ of /æːmpɪːtjən/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': stimuleren, aanzetten tot
+*'''Heerkomst''': van ''aan'' en ''peerd'' (paard) - afkomstig van het slaan met een zweep om een paard aan te zetten tot werken.
+*'''Vervougen''':
+**Ik peerdje aan
+**Doe peerdjest aan
+**Hai peerdjet aan
+**Wie,joe,zai peerdjen aan
+**Ik heb aanpeerdjed
+
+==Aargens==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': aargenswoar, aargendwoar
+*'''Ôfgelaaide woorden''': aargenswoar, aargendwoar (ergens)
+*'''Nederlaands''': ergens
+*'''Heerkomst''': 
+*'''Vervougen''': 
+
+==Aaske==
+*'''Oetsproak''': /æːskə/ 
+*'''Meervold''': 
+*'''Aander meugelkheden''': aask
+*'''Ôfgelaaide woorden''': aaskemmer (prullebak, lett. asemmer)
+*'''Nederlaands''': as (overblijfsel van vuur)
+*'''Heerkomst''': van t Proto-Germoanse ''askōn''
+*'''Vervougen''': 
+
+==Acht==
+===Betaikenis 1===
+*'''Oetsproak''': /æxt/
+*'''Meervold''': achten
+*'''Aander meugelkheden''': aacht(e)
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': acht (getal)
+*'''Heerkomst''': van t Proto-Germoanse ''ahtōu'', van t Proto-Indo-Uropese ''oḱtṓw''. 
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': /æxt/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**aandocht
+**achtenis ([[WEV]])
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': aandacht (die je moet/zou moeten geven; vergelijk ''Geef acht!'')
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Admis==
+[[STD]]
+*'''Oetsproak''': /ædmɪəs/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**asmis 
+**sums 
+**sumtieds
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': soms
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Adìnlek==
+*'''Oetsproak''': /ædɪənlək/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**adìn-, adènliek(s)
+**aibels
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': behoorlijk
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Adrillen==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': Adrillenkaarms (allerheiligenkermis in Winschoten)
+*'''Nederlaands''': allerheiligen (christelijke feestdag)
+*'''Heerkomst''': Meugelk van '''a'''l'''d'''e'''r'''h'''ill'''eg'''en'''.
+*'''Vervougen''':
+
 {{Grunnegs woordenbouk}}
 
 [[Kattegerie:Grunnegs artikel]]
