--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -112,7 +112,7 @@
 ==Aalmoal==
 *'''Oetsproak''': 
 *'''Meervold''': 
-*'''Aander meugelkheden''': apmoal
+*'''Aander meugelkheden''': apmoal, aal
 *'''Ôfgelaaide woorden''': apmoal (allemaal)
 *'''Nederlaands''': allemaal
 *'''Heerkomst''': van ''aal'' en ''moal''
