--- a/Tweantsen_taalwiezer.mw
+++ b/Tweantsen_taalwiezer.mw
@@ -472,7 +472,7 @@ Met onregelmoatige woarkwöarde wordt dee woarkwöarde bedoold woervan n stam in
 |-
 |Hee 
 |löp
-|leup
+|leup/leep
 |elop/loopn
 |-
 |Wiej 
