--- a/Tweantsen_taalwiezer.mw
+++ b/Tweantsen_taalwiezer.mw
@@ -496,7 +496,9 @@ Met onregelmoatige woarkwöarde wordt dee woarkwöarde bedoold woervan n stam in
 
 In wat deeln van Tweante wördt de '''sch-''' op zin [[Nederlaands|Hollaands]] oet-esprökn, in aandere deeln wördt e as '''sk-''' oet-esprökn. Dr is gin regel vuur, en n eenn zegt ''skole'' en n aander ''schole''. Dit is ook nit per plaatse verskilnd, mear hef te maakn met persoonlike vuurkuur, of invlood van de umgewing. 
 
-Dr wörd wal es edacht det dit dr met te maakn hef det de oolde leu oet Tweante öare wichter Hollaands prebeern te learn en de wichter verbettern as zee in t Hollaands van ''skuur'' vuur ''schuur'' deedn. De wichter gungn disn regel dus ok in t Tweants gebroekn. Disse "verbettering" zorgt dr ook vuur det leu ook wöarde met ''sch-'' goat oetsprekn dee't juust wál met ne ''sk-'' mut wordn oet esprökn, zo as bv. ''scheetbord'' (skateboard) en ''schielers'' (skeelers).
+Dr wörd wal es edacht det dit dr met te maakn hef det de oolde leu oet Tweante öare wichter Hollaands prebeern te learn en de wichter verbettern as zee in t Hollaands van ''skuur'' vuur ''schuur'' deedn. De wichter gungn disn regel dus ok in t Tweants gebroekn. 
+
+Disse "verbettering" zorgt dr ook vuur det leu ook wöarde met ''sch-'' goat oetsprekn dee't juust wál met ne ''sk-'' mut wordn oet esprökn, zo as bv. ''scheetbord'' (skateboard) en ''schielers'' (skeelers). Dit woarkt ook aansumme: leenwöarde oet t Hollaands met ne ''sch-'' wordt mangs met ne ''sk-'' oet esprökn (bv. ''niejskierig'')
 
 Op disse wiki tref ie dus mangs '''sch-''', en mangs '''sk-'''.
 
