--- a/Tweantsen_taalwiezer.mw
+++ b/Tweantsen_taalwiezer.mw
@@ -503,7 +503,7 @@ Disse "verbettering" zorgt dr ook vuur det leu ook wöarde met ''sch-'' goat oet
 Op disse wiki tref ie dus mangs '''sch-''', en mangs '''sk-'''.
 
 == -ing/-ige ==
-Wat woarkweurde köant (net as in t Hollaands) veraanderd wordn in zelfstandige naamweurde duur der '''-ing''' of '''-ige''' (oetsproak -ege) achter te plakn. Dee leste meugelikheaid is alleen wat eulderwètser. Rechtevoort wördt -ing mear gebroekt, mear -ige keump in Riesn ook nog wal völle vuur. Doarumme kö'j hier beaide teegnkomn.
+Wat woarkweurde köant (net as in t Hollaands) veraanderd wordn in zelfstandige naamweurde duur der '''-ing''' of '''-ige''' (oetsproak -ege) achter te plakn. Dee leste meugelikheaid is alleen wat eulderwètser. Rechtevoort wördt -ing mear gebroekt, mear -ige keump in wat plaatsen ook nog wal völle vuur. Doarumme kö'j hier beaide teegnkomn.
 Vuurbeeldn:
 *verbeelding - verbeeldige
 *bedoling - bedolige
